add more feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Limecat Application</string>
+    <string name="hint_msg">Enter message</string>
+    <string name="button_text">Send</string>
+    <string name="title_activity_second">SecondActivity</string>
 </resources>
